--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DISCORD_TOKEN=NjYyNzU2NTI2NTU2OTcxMDYx.Xn6P-Q.LI23meKm2SamFLPlY1skaWYsH0I
+DISCORD_TOKEN=NjYyNzU2NTI2NTU2OTcxMDYx.XoyVXA.Kau2kTAh2pt60VjqcaBICKeSrdI
+URL_WEBHOOK=https://discordapp.com/api/webhooks/662777013559623680/fNiK4jN-MZ58HXeLJclajDqg0hLlup04pxH_Qi66LT2b7KGDQvFpvELNbEB4yo-nVPyp
